--- a/app/src/main/res/layout/request_text_input.xml
+++ b/app/src/main/res/layout/request_text_input.xml
@@ -11,19 +11,30 @@
         android:layout_margin="8dp"
         android:hint="@string/form_user_name" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <EditText
         android:id="@+id/curry_form_steps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:hint="@string/form_food_name" />
+        android:gravity="top|left"
+        android:hint="@string/form_food_name"
+        android:inputType="textMultiLine"
+        android:lines="6"
+        android:minLines="4"
+        android:scrollbars="vertical"
+        android:scrollHorizontally="false" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <EditText
         android:id="@+id/curry_form_ingredients"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:height="@string/form_steps_ingredients_text_input_height"
-        android:hint="@string/form_food_description" />
+        android:gravity="top|left"
+        android:hint="@string/form_food_description"
+        android:inputType="textMultiLine"
+        android:lines="6"
+        android:minLines="4"
+        android:scrollbars="vertical"
+        android:scrollHorizontally="false" />
 
 </LinearLayout>
