Missed type items

--- a/app/src/main/res/layout/rent_text_input.xml
+++ b/app/src/main/res/layout/rent_text_input.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:gravity="top|left"
-        android:hint="@string/delivery_address"
+        android:hint="@string/type_items"
         android:inputType="textMultiLine"
         android:lines="6"
         android:minLines="4"
